# Linux_Study

./: README.md
MAINCPP/: CMakeLists.txt  hello
MAINCPP/App/: CMakeLists.txt  eth_task.cpp  eth_task.h  main_task.cpp  main_task.h
MAINCPP/Config/: CMakeLists.txt  config.cpp  config.h
MAINCPP/Lib/src/: CMakeLists.txt
MAINCPP/Log/: 202402230002.txt  202402230003.txt  202402270000.txt  202402270001.txt  202402270002.txt  202402290000.txt
MAINCPP/Main/: led.c  main.cpp  main.h
MAINCPP/Mylib/: CMakeLists.txt  lpajsj_log.c  lpajsj_log.h
