cmake_minimum_required(VERSION 3.5)
project(HELLO)
# set(CMAKE_C_FLAGS "-lpthread -std=c++11")
# set(CMAKE_CXX_FLAGS "-lpthread -std=c++11")
add_subdirectory(App)
add_subdirectory(Config)
add_subdirectory(Mylib)
include_directories(${PROJECT_SOURCE_DIR}/App ${PROJECT_SOURCE_DIR}/Config ${PROJECT_SOURCE_DIR}/Mylib)
link_directories(${PROJECT_SOURCE_DIR}/App ${PROJECT_SOURCE_DIR}/Config ${PROJECT_SOURCE_DIR}/Mylib)
add_executable(hello ${PROJECT_SOURCE_DIR}/Main/main.cpp)
target_link_libraries(hello libmain_task libeth_task libconfig liblog pthread)